--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -37,4 +37,4 @@ jobs:
       run: composer install --prefer-dist --no-progress
 
     - name: Run PHPMD
-      run: phpmd . github codesize,controversial,design,naming,unusedcode --exclude 'vendor/*'
+      run: phpmd . github cleancode,codesize,controversial,design,naming,unusedcode --exclude 'vendor/*'
