--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -2,7 +2,7 @@ name: PHP Composer
 
 on:
   push:
-    branches: [ main ]
+    branches: [ '*' ]
   pull_request:
     branches: [ main ]
 
@@ -36,5 +36,8 @@ jobs:
     - name: Install dependencies
       run: composer install --prefer-dist --no-progress
 
+    - name: Enable problem matcher
+      run: echo "::add-matcher::.github/phpmd-matcher.json"
+
     - name: Run PHPMD
-      run: phpmd . github cleancode,codesize,controversial,design,naming,unusedcode --exclude 'vendor/*'
+      run: ./vendor/bin/phpmd . github codesize,controversial,design,naming,unusedcode --exclude 'vendor/*'
