--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "description": "",
     "license": "MIT",
     "require": {
-        "phpmd/phpmd": "^2.10"
+        "phpmd/phpmd": "^2.10",
+        "squizlabs/php_codesniffer": "^3.6"
     },
     "authors": [
         {
